// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should execute onChange callback on checking 1`] = `
<label
  class="container"
  data-qa="Checkbox"
>
  <input
    class="input"
    type="checkbox"
    value=""
  />
  <div
    class="control"
  />
</label>
`;

exports[`Checkbox should render correctly on external value update 1`] = `
<label
  class="container"
  data-qa="Checkbox"
>
  <input
    class="input"
    type="checkbox"
    value=""
  />
  <div
    class="control"
  />
</label>
`;

exports[`Checkbox should render correctly with attributes 1`] = `
<label
  class="test-class container"
  data-qa="Checkbox"
>
  <input
    class="input"
    id="test-id"
    type="checkbox"
    value=""
  />
  <div
    class="control"
  />
</label>
`;

exports[`Checkbox should render correctly with checked prop 1`] = `
<label
  class="container checked"
  data-qa="Checkbox"
>
  <input
    checked=""
    class="input"
    type="checkbox"
    value=""
  />
  <div
    class="control checked"
  >
    <svg
      class="icon"
      data-qa="Check"
      fill="none"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m6 11 3 3 6-7"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
      />
    </svg>
  </div>
</label>
`;

exports[`Checkbox should render correctly with disabled prop 1`] = `
<label
  class="container disabled"
  data-qa="Checkbox"
>
  <input
    class="input"
    disabled=""
    type="checkbox"
    value=""
  />
  <div
    class="control disabled"
  />
</label>
`;

exports[`Checkbox should render correctly with label 1`] = `
<label
  class="container"
  data-qa="Checkbox"
>
  <input
    class="input"
    type="checkbox"
    value=""
  />
  <div
    class="control"
  />
  <span
    class="label"
  >
    Testing checkbox
  </span>
</label>
`;

exports[`Checkbox should render correctly with name prop 1`] = `
<label
  class="container"
  data-qa="Checkbox"
>
  <input
    class="input"
    name="Testing checkbox"
    type="checkbox"
    value=""
  />
  <div
    class="control"
  />
</label>
`;

exports[`Checkbox should render correctly with no props 1`] = `
<label
  class="container"
  data-qa="Checkbox"
>
  <input
    class="input"
    type="checkbox"
    value=""
  />
  <div
    class="control"
  />
</label>
`;

exports[`Checkbox should render correctly with readonly prop 1`] = `
<label
  class="container readOnly"
  data-qa="Checkbox"
>
  <input
    class="input"
    type="checkbox"
    value=""
  />
  <div
    class="control"
  />
</label>
`;

exports[`Checkbox should render correctly with value prop 1`] = `
<label
  class="container"
  data-qa="Checkbox"
>
  <input
    class="input"
    type="checkbox"
    value="Testing checkbox"
  />
  <div
    class="control"
  />
</label>
`;
